# batch_video_translate

./: pyproject.toml  readme.md
configs/: refinement_protocol.txt
src/: main.py
src/modules/: extractor.py  legacy_translator.py  llm_translator.py  srt_optimizer.py  transcriber.py  translator.py
src/modules/providers/: base_provider.py  copilot_ui.py  llama_provider.py
src/modules/strategies/: hybrid_refiner.py
src/utils/: file_handler.py  srt_handler.py
tests/: test_chunk_validation.py  test_engine_independence.py  test_hybrid_refiner.py  test_legacy_translator.py  test_llm_translator.py  test_main_pipeline.py  test_srt_handler.py  test_transcriber.py  test_translator.py
